--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,13 @@ env:
     ###
     ### Debian stretch
     ###
-    # single problem roles (libreoffice)
-    - single=0 random=0 dist=debian-libreoffice
-
+    # single problem roles (interop)
+    - single=0 random=0 dist=debian-interop
 
 before_script:
   # Run it multiple times until it succeeds. This is to prevent errors that occur due to
   # network timeouts between travis-ci
-  - max=100; i=0; while [ $i -lt $max ]; do if docker build -t ansible-debian .; then break; else i=$((i+1)); fi done
+  - max=10; i=0; while [ $i -lt $max ]; do if docker build -t ansible-debian .; then break; else i=$((i+1)); fi done
 
 script:
   # 1. Run it multiple times until it succeeds. This is to prevent errors that occur due to network timeouts between travis-ci
@@ -29,7 +28,7 @@ script:
         for r in ${ROLES}; do
             printf "========== Run %s / %s (%s) ==========\n" "${START}" "${TOTAL}" "${r}";
             max=10; i=0; while [ $i -lt $max ]; do
-                if docker run --rm -e MY_HOST=${dist} -e tag=${r} -t ansible-debian; then
+                if docker run --rm --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro -e verbose=3 -e MY_HOST=${dist} -e tag=${r} -t ansible-debian; then
                     break;
                 else
                     i=$((i+1));
@@ -39,5 +38,5 @@ script:
             START=$((START+1));
         done;
     else
-        docker run --rm -e MY_HOST=${dist} -e random=${random} -t ansible-debian;
+        docker run --rm --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro -e verbose=3 -e MY_HOST=${dist} -e random=${random} -t ansible-debian;
     fi
