--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -57,6 +57,7 @@ apt_packages: []
 ### 'remove':  Uninstall the package
 ### Any other value will ignore the package (neither install nor uninstall)
 
+kernel_sysctl_tweak:   'install'
 autorunner:            'ignore'
 chromium:              'ignore'
 clipmenu:              'ignore'
