--- a/roles/oh-my-zsh/tasks/uninstall.yml
+++ b/roles/oh-my-zsh/tasks/uninstall.yml
@@ -1,6 +1,7 @@
 ---
 - name: reset bash as default shell
   user: name=root shell=/bin/bash
+  become: yes
 
 - name: ensure requirements are removed
   include_role:
@@ -12,12 +13,16 @@
 
 - name: remove zshrc and oh-my-zsh base path
   file: path=/root/.oh-my-zsh state=absent
+  become: yes
 
 - name: remove oh-my-zsh-conf path
   file: path=/root/conf state=absent
+  become: yes
 
 - name: remove oh-my-zsh-rc symlink
   file: path=/root/.zshrc state=absent
+  become: yes
 
 - name: remove oh-my-zsh-history file
   file: path=/root/.zsh_history state=absent
+  become: yes
