--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ sudo: required
 
 os: linux
 
-env:
-    matrix:
-      - OS=debian DIST=stretch
-
 language: python
 
 services:
@@ -25,8 +21,7 @@ before_script:
   - max=10; i=0; while [ $i -lt $max ]; do if docker build -t ansible-debian .; then break; else i=$((i+1)); fi done
 
 script:
-  # 1. Run it multiple times until it succeeds. This is to prevent errors that occur due to network timeouts between travis-ci
-  # 2. Separate between single runs and full runs
+  - docker build -t ansible-debian .
   - if [ "${single}" = "1" ]; then
         ROLES="$( for d in $(/bin/ls roles/); do if [ -d roles/${d} ]; then echo $d; fi done | grep -vE '*-meta$' | sort -R )";
         TOTAL="$( echo "${ROLES}" | wc -l )";
@@ -46,3 +41,6 @@ script:
     else
         docker run --rm --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro -e verbose=3 -e MY_HOST=${dist} -e random=${random} -t ansible-debian;
     fi
+
+  - docker system prune -f
+
