--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,15 @@ before_script:
 
 script:
   - docker build -t ansible-debian .
-  - if [ "${single}" = "1" ]; then
+  - DOCKER_CMD_PRIV_OPT="--privileged --cap-add=ALL -v /dev:/dev -v /lib/modules:/lib/modules -v /sys/fs/cgroup:/sys/fs/cgroup:ro"; \
+    if [ "${single}" = "1" ]; then
         ROLES="$( for d in $(/bin/ls roles/); do if [ -d roles/${d} ]; then echo $d; fi done | grep -vE '*-meta$' | sort -R )";
         TOTAL="$( echo "${ROLES}" | wc -l )";
         START=1;
         for r in ${ROLES}; do
             printf "========== Run %s / %s (%s) ==========\n" "${START}" "${TOTAL}" "${r}";
             max=10; i=0; while [ $i -lt $max ]; do
-                if docker run --rm --privileged --cap-add=ALL -v /dev:/dev -v /lib/modules:/lib/modules -v /sys/fs/cgroup:/sys/fs/cgroup:ro -e verbose=3 -e MY_HOST=${dist} -e tag=${r} -t ansible-debian; then
+                if docker run --rm ${DOCKER_CMD_PRIV_OPT} -e verbose=3 -e MY_HOST=${dist} -e tag=${r} -t ansible-debian; then
                     break;
                 else
                     i=$((i+1));
@@ -39,7 +40,7 @@ script:
             START=$((START+1));
         done;
     else
-        docker run --rm --privileged --cap-add=ALL -v /dev:/dev -v /lib/modules:/lib/modules -v /sys/fs/cgroup:/sys/fs/cgroup:ro -e verbose=3 -e MY_HOST=${dist} -e random=${random} -t ansible-debian;
+        docker run --rm ${DOCKER_CMD_PRIV_OPT} -e verbose=3 -e MY_HOST=${dist} -e random=${random} -t ansible-debian;
     fi
 
   - docker system prune -f
