--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 
 env:
-  - DOCKER_CMD_PRIV_OPT="--privileged --cap-add=ALL -v /dev:/dev -v /lib/modules:/lib/modules -v /sys/fs/cgroup:/sys/fs/cgroup:ro"
+  - DOCKER_CMD_PRIV_OPT="--privileged --cap-add=ALL -v /tmp:/tmp -v /dev:/dev -v /lib/modules:/lib/modules -v /sys/fs/cgroup:/sys/fs/cgroup:ro"
 
 language: python
 
@@ -22,6 +22,7 @@ before_script:
   - max=100; i=0; while [ $i -lt $max ]; do if docker build -t ansible-debian .; then break; else i=$((i+1)); fi done
 
 script:
+  - echo "== RUN DOCKER IN PRIV MODE: ${DOCKER_CMD_PRIV_OPT}"
   - if [ "${single}" = "1" ]; then
         ROLES="$( for d in $(/bin/ls roles/); do if [ -d roles/${d} ]; then echo $d; fi done | grep -vE '*-meta$' | sort -R )";
         TOTAL="$( echo "${ROLES}" | wc -l )";
