--- a/roles/kernel-sysctl-tweak/tasks/install.yml
+++ b/roles/kernel-sysctl-tweak/tasks/install.yml
@@ -19,6 +19,7 @@
     name: fs.file-max
     value: "{{ file_max }}"
     state: present
+  become: yes
 
 # [000.1] do less swapping (1/3)
 - name: sysctl | SET vm.swappiness
@@ -26,6 +27,7 @@
     name: vm.swappiness
     value: "{{ swappiness }}"
     state: present
+  become: yes
 
 # [000.1] do less swapping (2/3)
 - name: sysctl | SET vm.dirty_ratio
@@ -33,6 +35,7 @@
     name: vm.dirty_ratio
     value: "{{ dirty_ratio }}"
     state: present
+  become: yes
 
 # [000.1] do less swapping (3/3)
 - name: sysctl | SET vm.dirty_background_ratio
@@ -40,6 +43,7 @@
     name: vm.dirty_background_ratio
     value: "{{ dirty_background_ratio }}"
     state: present
+  become: yes
 
 # [000.1] prevent kernel NULL pointer dereference
 - name: sysctl | SET vm.mmap_min_addr
@@ -47,6 +51,7 @@
     name: vm.mmap_min_addr
     value: "{{ mmap_min_addr }}"
     state: present
+  become: yes
 
 # [000.1] sets the time before the kernel considers migrating a process to another core
 - name: sysctl | SET kernel.sched_migration_cost_ns
@@ -54,6 +59,7 @@
     name: kernel.sched_migration_cost_ns
     value: "{{ sched_migration_cost_ns }}"
     state: present
+  become: yes
 
 # [000.1] guarding against malicious software attacks, activate address space layout randomization (ASLR)
 - name: sysctl | SET kernel.randomize_va_space
@@ -61,6 +67,7 @@
     name: kernel.randomize_va_space
     value: "{{ randomize_va_space }}"
     state: present
+  become: yes
 
 # [000.1] hiding kernel pointers from unprivileged users
 - name: sysctl | SET kernel.kptr_restrict
@@ -68,6 +75,7 @@
     name: kernel.kptr_restrict
     value: "{{ kptr_restrict }}"
     state: present
+  become: yes
 
 # [000.1] prevent unprivileged users from viewing dmesg command output
 - name: sysctl | SET kernel.dmesg_restrict
@@ -75,6 +83,7 @@
     name: kernel.dmesg_restrict
     value: "{{ dmesg_restrict }}"
     state: present
+  become: yes
 
 # [000.1] activate YAMA system-wide DAC security protections that are not handled by the core kernel itself
 - name: sysctl | SET kernel.yama.ptrace_scope
@@ -82,6 +91,7 @@
     name: kernel.yama.ptrace_scope
     value: "{{ ptrace_scope }}"
     state: present
+  become: yes
 
 # ---------------------------------------------------------------------------------------------------------------------
 # GENERAL NETWORK SECURITY OPTIONS
@@ -93,6 +103,7 @@
     name: net.ipv4.tcp_synack_retries
     value: "{{ tcp_synack_retries }}"
     state: present
+  become: yes
 
 # [000.1] number of times SYNs for passive TCP connection
 - name: sysctl | SET net.ipv4.tcp_syn_retries
@@ -100,6 +111,7 @@
     name: net.ipv4.tcp_syn_retries
     value: "{{ tcp_syn_retries }}"
     state: present
+  become: yes
 
 # [000.1] allowed local port range
 - name: sysctl | SET net.ipv4.ip_local_port_range
@@ -107,6 +119,7 @@
     name: net.ipv4.ip_local_port_range
     value: "{{ ip_local_port_range }}"
     state: present
+  become: yes
 
 # [000.1] protect against TCP Time-Wait
 - name: sysctl | SET net.ipv4.tcp_rfc1337
@@ -114,6 +127,7 @@
     name: net.ipv4.tcp_rfc1337
     value: "{{ tcp_rfc1337 }}"
     state: present
+  become: yes
 
 # [000.1] control synCookies
 - name: sysctl | SET net.ipv4.tcp_syncookies
@@ -121,6 +135,7 @@
     name: net.ipv4.tcp_syncookies
     value: "{{ tcp_syncookies }}"
     state: present
+  become: yes
 
 # [000.1] decrease the time default value for tcp_fin_timeout connection
 - name: sysctl | SET net.ipv4.tcp_fin_timeout
@@ -128,6 +143,7 @@
     name: net.ipv4.tcp_fin_timeout
     value: "{{ tcp_fin_timeout }}"
     state: present
+  become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (1/3)
 - name: sysctl | SET net.ipv4.tcp_keepalive_time
@@ -135,6 +151,7 @@
     name: net.ipv4.tcp_keepalive_time
     value: "{{ tcp_keepalive_time }}"
     state: present
+  become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (2/3)
 - name: sysctl | SET net.ipv4.tcp_keepalive_probes
@@ -142,6 +159,7 @@
     name: net.ipv4.tcp_keepalive_probes
     value: "{{ tcp_keepalive_probes }}"
     state: present
+  become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (3/3)
 - name: sysctl | SET net.ipv4.tcp_keepalive_intvl
@@ -149,6 +167,7 @@
     name: net.ipv4.tcp_keepalive_intvl
     value: "{{ tcp_keepalive_intvl }}"
     state: present
+  become: yes
 
 # [000.1] mitigate TCP SYN Flood Attacks / decent DDoS attacks
 - name: sysctl | SET net.netfilter.nf_conntrack_tcp_loose
@@ -156,6 +175,7 @@
     name: net.netfilter.nf_conntrack_tcp_loose
     value: "{{ nf_conntrack_tcp_loose }}"
     state: present
+  become: yes
 
 # [000.1] tweak network settings for large number of concurrent clients
 - name: sysctl | SET net.ipv4.tcp_max_orphans
@@ -163,6 +183,7 @@
     name: net.ipv4.tcp_max_orphans
     value: "{{ tcp_max_orphans }}"
     state: present
+  become: yes
 
 # ---------------------------------------------------------------------------------------------------------------------
 # GENERAL NETWORK TUNING OPTIONS
@@ -174,6 +195,7 @@
     name: net.core.rmem_default
     value: "{{ rmem_default }}"
     state: present
+  become: yes
 
 # [000.1] maximum socket receive buffer
 - name: sysctl | SET net.core.rmem_max
@@ -181,6 +203,7 @@
     name: net.core.rmem_max
     value: "{{ rmem_max }}"
     state: present
+  become: yes
 
 # [000.1] default socket send buffer
 - name: sysctl | SET net.core.wmem_default
@@ -188,6 +211,7 @@
     name: net.core.wmem_default
     value: "{{ wmem_default }}"
     state: present
+  become: yes
 
 # [000.1] maximum socket send buffer
 - name: sysctl | SET net.core.wmem_max
@@ -195,6 +219,7 @@
     name: net.core.wmem_max
     value: "{{ wmem_max }}"
     state: present
+  become: yes
 
 # [000.1] increase number of incoming connections
 - name: sysctl | SET net.core.somaxconn
@@ -202,6 +227,7 @@
     name: net.core.somaxconn
     value: "{{ somaxconn }}"
     state: present
+  become: yes
 
 # [000.1] increase number of incoming connections backlog
 - name: sysctl | SET net.core.netdev_max_backlog
@@ -209,6 +235,7 @@
     name: net.core.netdev_max_backlog
     value: "{{ netdev_max_backlog }}"
     state: present
+  become: yes
 
 # [000.1] increase number of incoming connections backlog (wall against synFlood DOS attack)
 - name: sysctl | SET net.ipv4.tcp_max_syn_backlog
@@ -216,6 +243,7 @@
     name: net.ipv4.tcp_max_syn_backlog
     value: "{{ tcp_max_syn_backlog }}"
     state: present
+  become: yes
 
 # [000.1] increase the maximum amount of option memory buffers
 - name: sysctl | SET net.core.optmem_max
@@ -223,6 +251,7 @@
     name: net.core.optmem_max
     value: "{{ optmem_max }}"
     state: present
+  become: yes
 
 # [000.1] increase the maximum total buffer-space allocatable (his is measured in units of pages (4096 bytes) [1/2]
 - name: sysctl | SET net.ipv4.tcp_mem
@@ -230,6 +259,7 @@
     name: net.ipv4.tcp_mem
     value: "{{ tcp_mem }}"
     state: present
+  become: yes
 
 # [000.1] increase the maximum total buffer-space allocatable (his is measured in units of pages (4096 bytes) [2/2]
 - name: sysctl | SET net.ipv4.udp_mem
@@ -237,6 +267,7 @@
     name: net.ipv4.udp_mem
     value: "{{ udp_mem }}"
     state: present
+  become: yes
 
 # [000.1] increase the read-buffer space allocatable (1/2)
 - name: sysctl | SET net.ipv4.tcp_rmem
@@ -244,6 +275,7 @@
     name: net.ipv4.tcp_rmem
     value: "{{ tcp_rmem }}"
     state: present
+  become: yes
 
 # [000.1] increase the read-buffer space allocatable (2/2)
 - name: sysctl | SET net.ipv4.udp_rmem_min
@@ -251,6 +283,7 @@
     name: net.ipv4.udp_rmem_min
     value: "{{ udp_rmem_min }}"
     state: present
+  become: yes
 
 # [000.1] increase the write-buffer-space allocatable (1/2)
 - name: sysctl | SET net.ipv4.tcp_wmem
@@ -258,6 +291,7 @@
     name: net.ipv4.tcp_wmem
     value: "{{ tcp_wmem }}"
     state: present
+  become: yes
 
 # [000.1] increase the write-buffer-space allocatable (2/2)
 - name: sysctl | SET net.ipv4.udp_wmem_min
@@ -265,6 +299,7 @@
     name: net.ipv4.udp_wmem_min
     value: "{{ udp_wmem_min }}"
     state: present
+  become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (1/3)
 - name: sysctl | SET net.ipv4.tcp_max_tw_buckets
@@ -272,6 +307,7 @@
     name: net.ipv4.tcp_max_tw_buckets
     value: "{{ tcp_max_tw_buckets }}"
     state: present
+  become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (2/3)
 - name: sysctl | SET net.ipv4.tcp_tw_recycle
@@ -279,6 +315,7 @@
     name: net.ipv4.tcp_tw_recycle
     value: "{{ tcp_tw_recycle }}"
     state: present
+  become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (3/3)
 - name: sysctl | SET net.ipv4.tcp_tw_reuse
