--- a/roles/kernel-sysctl-tweak/tasks/install.yml
+++ b/roles/kernel-sysctl-tweak/tasks/install.yml
@@ -19,6 +19,7 @@
     name: fs.file-max
     value: "{{ file_max }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] do less swapping (1/3)
@@ -27,6 +28,7 @@
     name: vm.swappiness
     value: "{{ swappiness }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] do less swapping (2/3)
@@ -35,6 +37,7 @@
     name: vm.dirty_ratio
     value: "{{ dirty_ratio }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] do less swapping (3/3)
@@ -43,6 +46,7 @@
     name: vm.dirty_background_ratio
     value: "{{ dirty_background_ratio }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] prevent kernel NULL pointer dereference
@@ -51,6 +55,7 @@
     name: vm.mmap_min_addr
     value: "{{ mmap_min_addr }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] sets the time before the kernel considers migrating a process to another core
@@ -59,6 +64,7 @@
     name: kernel.sched_migration_cost_ns
     value: "{{ sched_migration_cost_ns }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] guarding against malicious software attacks, activate address space layout randomization (ASLR)
@@ -67,6 +73,7 @@
     name: kernel.randomize_va_space
     value: "{{ randomize_va_space }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] hiding kernel pointers from unprivileged users
@@ -75,6 +82,7 @@
     name: kernel.kptr_restrict
     value: "{{ kptr_restrict }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] prevent unprivileged users from viewing dmesg command output
@@ -83,6 +91,7 @@
     name: kernel.dmesg_restrict
     value: "{{ dmesg_restrict }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] activate YAMA system-wide DAC security protections that are not handled by the core kernel itself
@@ -91,6 +100,7 @@
     name: kernel.yama.ptrace_scope
     value: "{{ ptrace_scope }}"
     state: present
+    reload: false
   become: yes
 
 # ---------------------------------------------------------------------------------------------------------------------
@@ -103,6 +113,7 @@
     name: net.ipv4.tcp_synack_retries
     value: "{{ tcp_synack_retries }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] number of times SYNs for passive TCP connection
@@ -111,6 +122,7 @@
     name: net.ipv4.tcp_syn_retries
     value: "{{ tcp_syn_retries }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] allowed local port range
@@ -119,6 +131,7 @@
     name: net.ipv4.ip_local_port_range
     value: "{{ ip_local_port_range }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] protect against TCP Time-Wait
@@ -127,6 +140,7 @@
     name: net.ipv4.tcp_rfc1337
     value: "{{ tcp_rfc1337 }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] control synCookies
@@ -135,6 +149,7 @@
     name: net.ipv4.tcp_syncookies
     value: "{{ tcp_syncookies }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] decrease the time default value for tcp_fin_timeout connection
@@ -143,6 +158,7 @@
     name: net.ipv4.tcp_fin_timeout
     value: "{{ tcp_fin_timeout }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (1/3)
@@ -151,6 +167,7 @@
     name: net.ipv4.tcp_keepalive_time
     value: "{{ tcp_keepalive_time }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (2/3)
@@ -159,6 +176,7 @@
     name: net.ipv4.tcp_keepalive_probes
     value: "{{ tcp_keepalive_probes }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (3/3)
@@ -167,6 +185,7 @@
     name: net.ipv4.tcp_keepalive_intvl
     value: "{{ tcp_keepalive_intvl }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] mitigate TCP SYN Flood Attacks / decent DDoS attacks
@@ -175,6 +194,7 @@
     name: net.netfilter.nf_conntrack_tcp_loose
     value: "{{ nf_conntrack_tcp_loose }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] tweak network settings for large number of concurrent clients
@@ -183,6 +203,7 @@
     name: net.ipv4.tcp_max_orphans
     value: "{{ tcp_max_orphans }}"
     state: present
+    reload: false
   become: yes
 
 # ---------------------------------------------------------------------------------------------------------------------
@@ -195,6 +216,7 @@
     name: net.core.rmem_default
     value: "{{ rmem_default }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] maximum socket receive buffer
@@ -203,6 +225,7 @@
     name: net.core.rmem_max
     value: "{{ rmem_max }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] default socket send buffer
@@ -211,6 +234,7 @@
     name: net.core.wmem_default
     value: "{{ wmem_default }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] maximum socket send buffer
@@ -219,6 +243,7 @@
     name: net.core.wmem_max
     value: "{{ wmem_max }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase number of incoming connections
@@ -227,6 +252,7 @@
     name: net.core.somaxconn
     value: "{{ somaxconn }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase number of incoming connections backlog
@@ -235,6 +261,7 @@
     name: net.core.netdev_max_backlog
     value: "{{ netdev_max_backlog }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase number of incoming connections backlog (wall against synFlood DOS attack)
@@ -243,6 +270,7 @@
     name: net.ipv4.tcp_max_syn_backlog
     value: "{{ tcp_max_syn_backlog }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase the maximum amount of option memory buffers
@@ -251,6 +279,7 @@
     name: net.core.optmem_max
     value: "{{ optmem_max }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase the maximum total buffer-space allocatable (his is measured in units of pages (4096 bytes) [1/2]
@@ -259,6 +288,7 @@
     name: net.ipv4.tcp_mem
     value: "{{ tcp_mem }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase the maximum total buffer-space allocatable (his is measured in units of pages (4096 bytes) [2/2]
@@ -267,6 +297,7 @@
     name: net.ipv4.udp_mem
     value: "{{ udp_mem }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase the read-buffer space allocatable (1/2)
@@ -275,6 +306,7 @@
     name: net.ipv4.tcp_rmem
     value: "{{ tcp_rmem }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase the read-buffer space allocatable (2/2)
@@ -283,6 +315,7 @@
     name: net.ipv4.udp_rmem_min
     value: "{{ udp_rmem_min }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase the write-buffer-space allocatable (1/2)
@@ -291,6 +324,7 @@
     name: net.ipv4.tcp_wmem
     value: "{{ tcp_wmem }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase the write-buffer-space allocatable (2/2)
@@ -299,6 +333,7 @@
     name: net.ipv4.udp_wmem_min
     value: "{{ udp_wmem_min }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (1/3)
@@ -307,6 +342,7 @@
     name: net.ipv4.tcp_max_tw_buckets
     value: "{{ tcp_max_tw_buckets }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (2/3)
@@ -315,6 +351,7 @@
     name: net.ipv4.tcp_tw_recycle
     value: "{{ tcp_tw_recycle }}"
     state: present
+    reload: false
   become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (3/3)
@@ -323,3 +360,4 @@
     name: net.ipv4.tcp_tw_reuse
     value: "{{ tcp_tw_reuse }}"
     state: present
+    reload: false
