--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ script:
         for r in ${ROLES}; do
             printf "========== Run %s / %s (%s) ==========\n" "${START}" "${TOTAL}" "${r}";
             max=10; i=0; while [ $i -lt $max ]; do
-                if docker run --rm ${DOCKER_CMD_PRIV_OPT} -e verbose=3 -e MY_HOST=${dist} -e tag=${r} -t ansible-debian; then
+                if docker run --rm ${DOCKER_CMD_PRIV_OPT} -e TRAVIS_RUNNING=true -e verbose=3 -e MY_HOST=${dist} -e tag=${r} -t ansible-debian; then
                     break;
                 else
                     i=$((i+1));
@@ -39,7 +39,7 @@ script:
             START=$((START+1));
         done;
     else
-        docker run --rm ${DOCKER_CMD_PRIV_OPT} -e verbose=3 -e MY_HOST=${dist} -e random=${random} -t ansible-debian;
+        docker run --rm ${DOCKER_CMD_PRIV_OPT} -e verbose=3 -e TRAVIS_RUNNING=true -e MY_HOST=${dist} -e random=${random} -t ansible-debian;
     fi
 
   - docker system prune -f
