--- a/roles/kernel-sysctl-tweak/tasks/uninstall.yml
+++ b/roles/kernel-sysctl-tweak/tasks/uninstall.yml
@@ -4,7 +4,7 @@
 # REMOVE OBSOLETE KERNEL MODULES
 # ---------------------------------------------------------------------------------------------------------------------
 
-- name: modprobe | add ip_conntrack kernel module
+- name: modprobe | remove ip_conntrack kernel module
   modprobe:
     name: ip_conntrack
     state: absent
@@ -13,234 +13,196 @@
 # REMOVE KERNEL TUNING | CORE SECURITY OPTIONS
 # ---------------------------------------------------------------------------------------------------------------------
 
-- name: sysctl | SET fs.file-max
+- name: sysctl | CLEAR/RESET fs.file-max
   sysctl:
     name: fs.file-max
     state: absent
-  become: yes
 
-- name: sysctl | SET vm.swappiness
+- name: sysctl | CLEAR/RESET vm.swappiness
   sysctl:
     name: vm.swappiness
     state: absent
-  become: yes
 
-- name: sysctl | SET vm.dirty_ratio
+- name: sysctl | CLEAR/RESET vm.dirty_ratio
   sysctl:
     name: vm.dirty_ratio
     state: absent
-  become: yes
 
-- name: sysctl | SET vm.dirty_background_ratio
+- name: sysctl | CLEAR/RESET vm.dirty_background_ratio
   sysctl:
     name: vm.dirty_background_ratio
     state: absent
-  become: yes
 
-- name: sysctl | SET vm.mmap_min_addr
+- name: sysctl | CLEAR/RESET vm.mmap_min_addr
   sysctl:
     name: vm.mmap_min_addr
     state: absent
-  become: yes
 
-- name: sysctl | SET kernel.sched_migration_cost_ns
+- name: sysctl | CLEAR/RESET kernel.sched_migration_cost_ns
   sysctl:
     name: kernel.sched_migration_cost_ns
     state: absent
-  become: yes
 
-- name: sysctl | SET kernel.randomize_va_space
+- name: sysctl | CLEAR/RESET kernel.randomize_va_space
   sysctl:
     name: kernel.randomize_va_space
     state: absent
-  become: yes
 
-- name: sysctl | SET kernel.kptr_restrict
+- name: sysctl | CLEAR/RESET kernel.kptr_restrict
   sysctl:
     name: kernel.kptr_restrict
     state: absent
-  become: yes
 
-- name: sysctl | SET kernel.dmesg_restrict
+- name: sysctl | CLEAR/RESET kernel.dmesg_restrict
   sysctl:
     name: kernel.dmesg_restrict
     state: absent
-  become: yes
 
-- name: sysctl | SET kernel.yama.ptrace_scope
+- name: sysctl | CLEAR/RESET kernel.yama.ptrace_scope
   sysctl:
     name: kernel.yama.ptrace_scope
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_synack_retries
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_synack_retries
   sysctl:
     name: net.ipv4.tcp_synack_retries
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_syn_retries
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_syn_retries
   sysctl:
     name: net.ipv4.tcp_syn_retries
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.ip_local_port_range
+- name: sysctl | CLEAR/RESET net.ipv4.ip_local_port_range
   sysctl:
     name: net.ipv4.ip_local_port_range
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_rfc1337
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_rfc1337
   sysctl:
     name: net.ipv4.tcp_rfc1337
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_syncookies
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_syncookies
   sysctl:
     name: net.ipv4.tcp_syncookies
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_fin_timeout
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_fin_timeout
   sysctl:
     name: net.ipv4.tcp_fin_timeout
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_keepalive_time
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_keepalive_time
   sysctl:
     name: net.ipv4.tcp_keepalive_time
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_keepalive_probes
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_keepalive_probes
   sysctl:
     name: net.ipv4.tcp_keepalive_probes
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_keepalive_intvl
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_keepalive_intvl
   sysctl:
     name: net.ipv4.tcp_keepalive_intvl
     state: absent
-  become: yes
 
-- name: sysctl | SET net.netfilter.nf_conntrack_tcp_loose
+- name: sysctl | CLEAR/RESET net.netfilter.nf_conntrack_tcp_loose
   sysctl:
     name: net.netfilter.nf_conntrack_tcp_loose
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_max_orphans
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_max_orphans
   sysctl:
     name: net.ipv4.tcp_max_orphans
     state: absent
-  become: yes
 
 # ---------------------------------------------------------------------------------------------------------------------
 # REMOVE GENERAL NETWORK TUNING OPTIONS
 # ---------------------------------------------------------------------------------------------------------------------
 
-- name: sysctl | SET net.core.rmem_default
+- name: sysctl | CLEAR/RESET net.core.rmem_default
   sysctl:
     name: net.core.rmem_default
     state: absent
-  become: yes
 
-- name: sysctl | SET net.core.rmem_max
+- name: sysctl | CLEAR/RESET net.core.rmem_max
   sysctl:
     name: net.core.rmem_max
     state: absent
-  become: yes
 
-- name: sysctl | SET net.core.wmem_default
+- name: sysctl | CLEAR/RESET net.core.wmem_default
   sysctl:
     name: net.core.wmem_default
     state: absent
-  become: yes
 
-- name: sysctl | SET net.core.wmem_max
+- name: sysctl | CLEAR/RESET net.core.wmem_max
   sysctl:
     name: net.core.wmem_max
     state: absent
-  become: yes
 
-- name: sysctl | SET net.core.somaxconn
+- name: sysctl | CLEAR/RESET net.core.somaxconn
   sysctl:
     name: net.core.somaxconn
     state: absent
-  become: yes
 
-- name: sysctl | SET net.core.netdev_max_backlog
+- name: sysctl | CLEAR/RESET net.core.netdev_max_backlog
   sysctl:
     name: net.core.netdev_max_backlog
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_max_syn_backlog
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_max_syn_backlog
   sysctl:
     name: net.ipv4.tcp_max_syn_backlog
     state: absent
-  become: yes
 
-- name: sysctl | SET net.core.optmem_max
+- name: sysctl | CLEAR/RESET net.core.optmem_max
   sysctl:
     name: net.core.optmem_max
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_mem
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_mem
   sysctl:
     name: net.ipv4.tcp_mem
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.udp_mem
+- name: sysctl | CLEAR/RESET net.ipv4.udp_mem
   sysctl:
     name: net.ipv4.udp_mem
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_rmem
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_rmem
   sysctl:
     name: net.ipv4.tcp_rmem
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.udp_rmem_min
+- name: sysctl | CLEAR/RESET net.ipv4.udp_rmem_min
   sysctl:
     name: net.ipv4.udp_rmem_min
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_wmem
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_wmem
   sysctl:
     name: net.ipv4.tcp_wmem
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.udp_wmem_min
+- name: sysctl | CLEAR/RESET net.ipv4.udp_wmem_min
   sysctl:
     name: net.ipv4.udp_wmem_min
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_max_tw_buckets
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_max_tw_buckets
   sysctl:
     name: net.ipv4.tcp_max_tw_buckets
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_tw_recycle
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_tw_recycle
   sysctl:
     name: net.ipv4.tcp_tw_recycle
     state: absent
-  become: yes
 
-- name: sysctl | SET net.ipv4.tcp_tw_reuse
+- name: sysctl | CLEAR/RESET net.ipv4.tcp_tw_reuse
   sysctl:
     name: net.ipv4.tcp_tw_reuse
     state: absent
-  become: yes
