fix: add missing sudo cmd to sysctl uninstall playbook task

--- a/roles/kernel-sysctl-tweak/tasks/uninstall.yml
+++ b/roles/kernel-sysctl-tweak/tasks/uninstall.yml
@@ -5,6 +5,7 @@
 # ---------------------------------------------------------------------------------------------------------------------
 
 - name: modprobe | remove ip_conntrack kernel module
+  become: true
   modprobe:
     name: ip_conntrack
     state: absent
